# getjump

./: .gitignore  .pre-commit-config.yaml  .pyre_configuration  Dockerfile  LICENSE.txt  README.md  cspell.json  getjump.html  index.html  mise.toml  mypy.ini  pyproject.toml  requirements.txt  search.js  search_size.sh  setup.cfg  setup.py
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/workflows/: ci.yml  manual_test.yml  release.yml  test.yml  test_input.yml
getjump/: GetJump.py  __init__.py  gap.py  getjump.py  main.py  margin.py
research/: all_size  episodes  height_rank  search_size.sh  test.sh  width_rank
tests/: test_getjump.py
