[metadata]
name = getjump
version = attr: getjump.__version__
description = Get and save images from jump web viewer
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = eggplants
author_email = w10776e8w@yahoo.co.jp
url = https://github.com/eggplants/getjump
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
include-package-data = True
python_requires = >= 3.7
install_requires =
    numpy>=1.21.2
    opencv-python>=4.5.3.56
    requests>=2.26.0
    types-requests>=2.27.11

[options.package_data]
getjump = py.typed

[options.extras_require]
dev =
    black
    flake8
    mypy
    setuptools>=46.4.0
    types-setuptools

[options.entry_points]
console_scripts =
    jget = getjump.main:main

[isort]
profile = black

[flake8]
indent-size = 4
max-line-length = 88
extend-ignore = W605

[mypy]
python_version = 3.9
show_error_codes = True
pretty = True
strict = True
