[metadata]
name = getjump
version = attr: getjump.__version__
description = Get and save images from jump web viewer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eggplants/getjump
author = eggplants
author_email = w10776e8w@yahoo.co.jp
license = MIT
license_file = LICENSE.txt
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    beautifulsoup4>=4.11.1
    pillow>=9.3.0
    requests>=2.28.1
    rich>=12.6.0
    types-beautifulsoup4>=4.11.6.1
    types-pillow>=9.3.0.4
    types-requests>=2.28.11.7
python_requires = >=3.8
include_package_data = True

[options.entry_points]
console_scripts =
    jget = getjump.main:main
    getjump = getjump.main:main

[options.extras_require]
dev =
    black
    flake8
    isort
    mypy
    pre-commit
    pytest
    pytest-cov
    setuptools>=46.4.0
    types-setuptools

[options.package_data]
getjump = py.typed

[isort]
profile = black

[flake8]
indent-size = 4
max-line-length = 120
extend-ignore = W605

[mypy]
python_version = 3.9
show_error_codes = True
pretty = True
strict = True

[tool:black]
line-length = 88
